# oxvgui

./: .editorconfig  .gitignore  .stylelintrc.json  Cargo.toml  LICENSE.md  README.md  biome.json  gulpfile.js  mod-config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit
.github/workflows/: check-github-actions-workflows.yaml  check-shell-scripts.yaml  check.yaml  ci.yml  deploy.yaml  maintenance.yaml  release.yaml  update-cache.yaml  update-cache.yml
brand/: favicon.xcf
src/: changelog.json  changelog.yaml  config.json  config.yaml  index.html
src/css/: _components.scss  _fonts.scss  all.scss  head.scss
src/css/components/: _changelog.scss  _floating-action-button.scss  _main-menu.scss  _material-slider.scss  _material-switch.scss  _material-tabs.scss  _results.scss  _ripple.scss  _settings.scss  _spinner.scss  _svg-output.scss  _toasts.scss  _toolbar.scss
src/js/oxvg-worker/: index.js
src/js/page/: index.js  main-controller.js  oxvg.js  svgo.js  worker-messenger.js
src/js/page/ui/: bg-fill-button.js  changelog.js  code-output.js  copy-button.js  download-button.js  file-drop.js  floating-action-button.js  main-menu.js  material-slider.js  output.js  pan-zoom.js  results-container.js  results.js  settings.js  spinner.js  svg-output.js
src/js/prism-worker/: index.js
src/js/svgo-worker/: index.js
src/js/sw/: index.js
src/js/utils/: storage.js
src/public/: manifest.webmanifest  robots.txt  sitemap.xml
src/rust/: custom_jobs.rs  extract_dimensions.rs  oxvg-wasm-bindings.rs  oxvg_wasm_bindings.rs
