# Based on https://github.com/noahbald/oxvg/blob/e156479dd9d4634542fa9849a45253e089c8d150/Cargo.toml
# and https://github.com/noahbald/oxvg/blob/e156479dd9d4634542fa9849a45253e089c8d150/packages/wasm/Cargo.toml
# and one line from https://github.com/noahbald/oxvg/blob/e156479dd9d4634542fa9849a45253e089c8d150/crates/oxvg_optimiser/Cargo.toml#L47

[package]
name = "oxvg-wasm-bindings"
version = "0.0.4" # This reflects the "@oxvg/wasm" NPM package version, and is used by the Maintenance workflow to commit updates
edition = "2021"
description = "WebAssembly bindings for OXVG based on '@oxvg/wasm', but customized for OXVGUI"
license = "MIT"
repository = "https://github.com/jonasgeiler/oxvgui"
authors = [
  "Jonas Geiler <crates@jonasgeiler.com>", # OXVGUI author
  "Noah <noahwbaldwin@gmail.com>" # OXVG author
]
publish = false

[lints.rust]
missing_docs = { level = "warn" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Willing to accept lossy conversions
cast_lossless = "allow"
# Willing to accept lossy conversions
cast_possible_truncation = "allow"
# dbg should only be used for debugging
dbg_macro = "warn"
# Not a priority for svgo parity
float_cmp = "allow"
# Too noisy and not really an issue
must_use_candidate = "allow"

[lib]
path = "src/rust/oxvg_wasm_bindings.rs"
crate-type = ["cdylib"]

[dependencies]
oxvg_optimiser = { version = "0.0.5", features = ["wasm"] }
oxvg_ast = { version = "0.0.5", features = ["roxmltree", "serialize"] }
oxvg_collections = { version = "0.0.5" }

console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
roxmltree = "0.20"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
typed-arena = "2.0"
wasm-bindgen = "=0.2.100"
tsify = { version = "0.5", default-features = false, features = ["js"] }
lightningcss = { version = "1.0.0-alpha.63", default-features = false, features = [
  "grid",
  "visitor",
] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["release_max_level_off"] }
serde_with = "3.15"
#web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
